--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-reactive-jsonb</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
