--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: '3.3'
 services:
+  backend:
+    image: src-backend-coding-challenge
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgres
+    environment:
+      - QUARKUS_DATASOURCE_JDBC_URL=jdbc:postgresql://postgres:5432/postgres
+      - QUARKUS_DATASOURCE_USERNAME=postgres
+      - QUARKUS_DATASOURCE_PASSWORD=postgres
   postgres:
     image: postgres:11
     ports:
